add two collections: blog and guides

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,14 @@ name: SUNY Potsdam ACM homepage
 include:
 - _pages
 
+collections:
+  blog:
+    permalink: /blog/:path/
+    output: true
+  guides:
+    permalink: /guides/:path/
+    output: true
+
 exclude:
 - README.md
 - LICENSE
